# mcpsqlmap

./: .coverage  .env  FIXES_SUMMARY.md  MANUAL_SETUP_INSTRUCTIONS.md  OPEN_WEBUI_INTEGRATION_GUIDE.md  PROGRAMMER_PROMPT.md  PROJECT_DOCUMENTATION.md  PROJECT_ISSUES_AND_FIXES.md  QUICK_SETUP_GUIDE.md  README.md  openwebui_config.json  package.json  pyproject.toml  requirements.txt  setup_openwebui_integration.py
src/app/: layout.tsx  page.tsx
src/app/tests/: App.test.tsx
src/mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/server/: __init__.py  main.py
src/server/api/: routes.py
src/server/bypass/: __init__.py  waf_bypass.py
src/server/core/: __init__.py  mcp_server.py
src/server/integrations/: __init__.py  integration_manager.py  resulttest.txt
src/server/payloads/: __init__.py  custom_payloads.json  payload_manager.py
src/server/techniques/: __init__.py  injection_handler.py
src/server/tests/: __init__.py  conftest.py  requirements-test.txt  run_tests.py  test_api_routes.py  test_injection_handler.py  test_integration_manager.py  test_main.py  test_mcp_server.py  test_payload_manager.py  test_performance.py  test_security.py  test_waf_bypass.py
